# discrete_math

./: .gitignore  CMakeLists.txt  README.md  build.gradle  lablist.json  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lab0/: tests.json
lab0/task1/: main.c
lab0/task10/: main.c
lab0/task11/: main.c
lab0/task12/: main.c
lab0/task2/: main.c
lab0/task3/: main.c
lab0/task4/: main.c
lab0/task5/: main.c
lab0/task6/: main.c
lab0/task7/: main.c
lab0/task8/: main.c
lab0/task9/: main.c
lab1/: main.c  tests.json
lab10/task1/: main.cpp
lab10/task2/: main.cpp
lab10/task3/: main.cpp
lab11/: main.cpp  util.h
lab11/task3/: main.cpp
lab11/task4/: main.cpp
lab11/task5/: main.cpp
lab11/task6/: main.cpp
lab11/task7/: main.cpp
lab12/: t.cpp  test.cpp
lab12/task1/: main.cpp  task1.h
lab13/: main.cpp
lab13/task2/: main.cpp
lab14/task2/: main.cpp
lab15/task2/: main.cpp
lab3/task7/: main.cpp
lab3/task8/: main.cpp
lab4/task3/: main.cpp
lab4/task6/: main.cpp
lab5/task1/: main.cpp
lab5/task13/: main.cpp
lab5/task6/: main.cpp
lab5/task8/: main.cpp
lab6/task5/: main.cpp
lab6/task6/: test.cpp
lab7/task13/: main.cpp
lab7/task15/: main.cpp
lab7/task23/: main.cpp
lab8/task3/: main.cpp
lab9/task2/: main.cpp
lesson060923/: task1.c
libs/alg/: CMakeLists.txt  alg.h  algc.h  algcpp.h
libs/alg/lab0/: task1.c  task10.c  task11.c  task12.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
libs/alg/lab1/: boolsetsoperations.c  orderedsetsoperations.c  unorderedsetsoperations.c
libs/alg/lab10/: task2.tpp  task3.tpp
libs/alg/lab11/: edge.tpp  graph.tpp  node.tpp  routes.tpp
libs/alg/lab12/: task1.tpp
libs/alg/lab13/: task1.tpp  task2.tpp
libs/alg/lab3/: set.tpp
libs/alg/lab5/: combinations.tpp  permutations.tpp  placements.tpp  subsets.tpp
libs/alg/lab6/: task6.cpp
libs/alg/lab7/: task13.cpp  task14.cpp  task23.cpp
libs/alg/lab8/: task1.cpp  task2.cpp
libs/alg/lab9/: task2.cpp
libs/alg/lesson060923/: task1.c
output/: N15WOMi3375P225.txt
src/main/java/org/example/: Main.java
